# planarity

./: .gitignore  CMakeLists.txt  CoordinatesBuilder.cpp  CoordinatesBuilder.h  Embedding.cpp  Embedding.h  GeometricEmbeddingCreator.cpp  GeometricEmbeddingCreator.h  Graph.cpp  Graph.h  PlanarityTest.cpp  PlanarityTest.h  PlanarityTester.cpp  PlanarityTester.h  README.md  check.h  check_drawing.cpp  check_drawing.h  main.cpp  main.py  run.py  run_all.sh
test/: test1.in  test11.in  test14.exp  test2.exp  test2.in  test3.in  test4.in  test5.in  test6.in  test7.exp  test7.in  test8.exp
